# uni

./: LICENSE  README.md  config.json
frontend/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/files/: layout.tsx  loading.tsx  page.tsx
frontend/components/buttons/: SignoutButton.tsx
frontend/components/cards/: SigninCard.tsx
frontend/components/dialogs/: UploadFileDialog.tsx
frontend/components/forms/: SigninForm.tsx
frontend/components/navbars/: AppNavbar.tsx
frontend/components/providers/: query-provider.tsx
frontend/components/tables/: LogsTable.tsx
frontend/components/ui/: alert-dialog.tsx  data-table.tsx  dropdown-menu.tsx  skeleton.tsx
frontend/lib/: const.ts  types.ts  utils.ts
frontend/lib/api/: authenticate.ts  delete-file.ts  get-file.ts  get-logs.ts  types.ts  upload-file.ts
frontend/lib/api/util/: api-url.ts  getAuth.ts  setAuth.ts
frontend/lib/auth/actions/: get-auth.ts  set-auth.ts  sign-out.ts
server/: Cargo.toml
server/src/: main.rs
