[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
chrono = "0.4.38"
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = "0.5.2"
tracing-subscriber = "0.3.18"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
